# istr

./: .gitignore  CMakeLists.txt  README.md
examples/: examples.cpp
include/: istr.hpp
